[project]
name = "open-qbench"
version = "0.2.1"
description = "Package for developing and executing quantum computing benchmarks"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "qiskit-aer~=0.17",
    "qiskit~=2.1",
    "qlauncher[dwave]>=2.0.5",
    "dimod>=0.12.20",
]
[project.optional-dependencies]
VQE = ["qiskit-nature[pyscf]>=0.7.2"]
QSVM = ["scikit-image>=0.25.1"]
IBM = ["qiskit-ibm-runtime>=0.36.1"]
AQT = ["qiskit-aqt-provider>=1.10.0"]

[dependency-groups]
dev = [
    "ruff==0.12.5",
    "pre-commit==4.2.0",
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "mypy>=1.17.0",
    "myst-nb>=1.3.0",
    "pandoc>=2.4",
    "better-apidoc>=0.3.2",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "coverage>=7.10.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "TID", "ISC", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
exclude = ["docs/"]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*", "qiskit-ibm-runtime.*", "ptseries.*"]
ignore_missing_imports = true
